--- a/2.html
+++ b/2.html
@@ -3,18 +3,26 @@
 <head>
   <title>Free 00</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">Fragrance</a></h1>
-  <ol>
-    <li><a href="1.html">Georgette</a></li>
-    <li><a href="2.html">Free 00</a></li>
-    <li><a href="3.html">Witchy Woo</a></li>
-  </ol>
-  <img src="Vyrao_Free-00.png" width="200">
-  <strong><h2>Free 00</h2>
-  <p><h3>£135 - 50ml
-  <br>Eau du Parfum for Liberation & Sensuality</h3></p></strong>
-  <p style="width:600px;"><strong>Description</strong><br>Free 00 layers fresh Sicilian lemon, mandarin and soothing orange flower absolute with the sensuality of Egyptian jasmine and vanilla, notes of calming sandalwood and waterlily for courage of heart. To feel alive and uninhibited is Free 00.</p>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html">Georgette</a></li>
+      <li><a href="2.html" id="active">Free 00</a></li>
+      <li><a href="3.html">Witchy Woo</a></li>
+    </ol>
+    <div id="article">
+      <img src="Vyrao_Free-00.png" width="200">
+      <strong><h2>Free 00</h2>
+      <p><h3>£135 - 50ml
+      <br>Eau du Parfum for Liberation & Sensuality</h3></p></strong>
+      <p style="width:100%;"><strong>Description</strong><br>Free 00 layers fresh Sicilian lemon, mandarin and soothing orange flower absolute with the sensuality of Egyptian jasmine and vanilla, notes of calming sandalwood and waterlily for courage of heart. To feel alive and uninhibited is Free 00.</p>
+    </div>
+  </div>
+  <div id="footer">
+    <a href="file:///Users/danbis/Desktop/WEB/index.html">Index</a>
+  </div>
 </body>
 </html>
