--- a/1.html
+++ b/1.html
@@ -3,19 +3,35 @@
 <head>
   <title>Georgette</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!--
+  태그 선택자<클래스 선택자<아이디 선택자 (제일 강함)
+  아이디 값은 페이지당? 단 한번만 등장해야 함. 중복되서는 안됨.
+  태그 선택자가 더 포괄적. 아이디 선택자는 구체적. 그래야 효율적
+  태그와 아이디 사이 중간, 클래스 선택자.
+  ref; css selector
+  태그=element
+  -->
   <h1><a href="index.html">Fragrance</a></h1>
-  <ol>
-    <li><a href="1.html">Georgette</a></li>
-    <li><a href="2.html">Free 00</a></li>
-    <li><a href="3.html">Witchy Woo</a></li>
-  </ol>
-  <img src="Vyrao_Georgette.png" width="200">
-  <strong><h2>Georgette</h2>
-  <p><h3>£135 - 50ml
-  <br>Eau du Parfum for Self Love</h3></p></strong>
-  <p style="width:600px;"><strong>Description</strong><br>This is our rose. Turkish rose oil for self-love and enlightenment, violet leaf absolute for self-expression, sandalwood and patchouli for grounding and guaiac wood for energy clearing, wrapped in pink pepper and black tobacco.
-    <a href="https://vyrao.com/product/georgette/" target="_blank" title="향수">Georgette</a> will raise your vibration.</p>
+  <div id="grid">
+      <ol>
+        <li><a href="1.html" id="active">Georgette</a></li>
+        <li><a href="2.html">Free 00</a></li>
+        <li><a href="3.html">Witchy Woo</a></li>
+      </ol>
+    <div id=article>
+      <img src="Vyrao_Georgette.png" width="200">
+      <strong><h2>Georgette</h2>
+      <p><h3>£135 - 50ml
+      <br>Eau du Parfum for Self Love</h3></p></strong>
+      <p style="width:100%;"><strong>Description</strong><br>This is our rose. Turkish rose oil for self-love and enlightenment, violet leaf absolute for self-expression, sandalwood and patchouli for grounding and guaiac wood for energy clearing, wrapped in pink pepper and black tobacco.
+        <a href="https://vyrao.com/product/georgette/" target="_blank" title="향수">Georgette</a> will raise your vibration.</p>
+    </div>
+   </div>
+   <div id="footer">
+     <a href="file:///Users/danbis/Desktop/WEB/index.html">Index</a>
+   </div>
 </body>
 </html>
