--- a/index.html
+++ b/index.html
@@ -3,14 +3,28 @@
 <head>
   <title>Fragrance</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">Fragrance</a></h1>
-  <ol>
-    <li><a href="1.html">Georgette</a></li>
-    <li><a href="2.html">Free 00</a></li>
-    <li><a href="3.html">Witchy Woo</a></li>
-  </ol>
-  <h1><p style="width:800px;">Vyrao use organic sugarcane alcohol, grown without pesticides and fertilizers. Our fragrances are comprised of 88-89% natural ingredients and 80% organic. Vyrao packaging is created from 100% recycled and recyclable fibres.</p></h1>
+  <div id="grid">
+      <ol>
+        <li><a href="1.html">Georgette</a></li>
+        <li><a href="2.html">Free 00</a></li>
+        <li><a href="3.html">Witchy Woo</a></li>
+      </ol>
+
+    <!--
+      <h1><a href="index.html"><font color="red">Fragrance</font></a></h1>
+      <ol>
+        <li><a href="1.html"><font color="red">Georgette</font></a></li>
+        <li><a href="2.html"><font color="red">Free 00</font></a></li>
+        <li><a href="3.html"><font color="red">Witchy Woo</font></a></li>
+      </ol>
+    -->
+    <div id="article">
+      <h2><p style="width:100%;">Vyrao use organic sugarcane alcohol, grown without pesticides and fertilizers. Our fragrances are comprised of 88-89% natural ingredients and 80% organic. Vyrao packaging is created from 100% recycled and recyclable fibres.</p></h2>
+    </div>
+  </div>
 </body>
 </html>
